# geph-support-bot

./: .gitignore  Cargo.toml  README.md  chat_history.db  config-format.yaml  history.db  start-latest-bot.sh
src/: actions.rs  database.rs  email.rs  facts.txt  initial-prompt.txt  learn.rs  main.rs  openai.rs  responder.rs  telegram.rs
