[package]
name = "geph-support-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acidjson = "0.1.3"
anyhow = "1.0.70"
argh = "0.1.10"
async-broadcast = "0.5.1"
env_logger = "0.10.0"
futures-util = "0.3.28"
isahc = {version="1.7.2", features=["json"]}
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
serde = {version="1.0.160", features=["derive"]}
serde_json = "1.0.96"
serde_yaml = "0.9.21"
smol = "1.3.0"
smolscale = "0.3.52"
sqlx = {version="0.6.3", features=["sqlite", "runtime-async-std-rustls"]}
